--- a/manifest-review.yml
+++ b/manifest-review.yml
@@ -2,6 +2,5 @@
 applications:
 - name: ashpal-tracker
   path: build/libs/pal-tracker.jar
-  random-route: true
-  env:
-   WELCOME_MESSAGE: Hello from Cloud Foundry
+  routes:
+  - route: ag-pal-tracker-review.apps.chicken.pal.pivotal.io
