--- a/manifest-production.yml
+++ b/manifest-production.yml
@@ -3,4 +3,4 @@ applications:
 - name: ashpal-tracker
   path: build/libs/pal-tracker.jar
   routes:
-  - route: ag-pal-tracker-review.apps.cumuluslabs.io
+  - route: agprod-pal-tracker-review.apps.cumuluslabs.io
