--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,10 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.1")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
