modified:   ci/pipeline.yml

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -73,7 +73,7 @@ jobs:
      CF_USERNAME: {{cf-username}}
      CF_PASSWORD: {{cf-password}}
      CF_ORG: {{cf-org}}
-     CF_SPACE: review
+     CF_SPACE: sandbox
      MYSQL_IP: {{mysql-ip}}
      DATABASE_NAME: {{review-database-name}}
      DATABASE_USERNAME: {{review-database-username}}
