modified:   build.gradle 	modified:   ci/build.yml 	modified:   manifest-production.yml 	modified:   manifest-review.yml 	new file:   src/main/java/io/pivotal/pal/tracker/JdbcTimeEntryRepository.java 	modified:   src/main/java/io/pivotal/pal/tracker/PalTrackerApplication.java

--- a/manifest-review.yml
+++ b/manifest-review.yml
@@ -4,3 +4,5 @@ applications:
   path: build/libs/pal-tracker.jar
   routes:
   - route: ag-pal-tracker-review.apps.cumuluslabs.io
+  services:
+  - tracker-database
